// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogBox component should render properly when it is open 1`] = `
.c4 {
  display: flex;
  z-index: 10;
  margin-top: 3rem;
  justify-content: flex-end;
  flex-direction: column;
}

.c4>* {
  flex-grow: 1;
}

.c4>*+* {
  margin: 1.6rem 0 0;
}

.c3 {
  flex: 1;
  box-sizing: border-box;
}

.c0 {
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67, 84, 101, 0.65);
  z-index: 1000;
  align-items: center;
  animation: bgFadeIn 0.4s cubic-bezier(0, 0, 0.33, 1);
  overflow: hidden;
}

.c2 {
  background-color: #ffffff;
  color: #13181D;
  font-weight: 500;
  margin-bottom: 2.4rem;
}

.c1 {
  background: #ffffff;
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 0 0.4rem 3.2 rgba(67, 84, 101, 0.5);
  box-sizing: border-box;
  border-radius: 1.2rem;
  overflow-y: auto;
  max-height: 80%;
  width: calc(100% - 4.8rem);
  padding: 2.4rem;
  animation: slideIn 0.4s cubic-bezier(0, 0, 0.33, 1);
}

@media (min-width:600px) {
  .c4 {
    flex-direction: row;
  }

  .c4>* {
    max-width: 50%;
  }

  .c4>*+* {
    margin: 0 0 0 1.6rem;
  }
}

@media (min-width:608px) {
  .c1 {
    max-width: 56rem;
    padding: 3.2rem;
  }

  .c1::-webkit-scrollbar {
    width: 0.5rem;
  }

  .c1::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .c1::-webkit-scrollbar-thumb {
    border-radius: 1rem;
    background-color: #b0bcc8;
  }
}

<div>
  <div
    class="c0"
    id="medly-dialog-box"
    open=""
  >
    <div
      class="c1"
      id="medly-dialog-box-popup"
      minheight="200px"
      minwidth="200px"
      open=""
    >
      <div
        class="c2"
        id="medly-dialog-box-header"
      >
        <p>
          Demo Header
        </p>
      </div>
      <div
        class="c3"
        id="medly-dialog-box-content"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
      </div>
      <div
        alignitems="right"
        class="c4"
        id="medly-dialog-box-actions"
      >
        Demo Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogBox component should render properly with close icon when it is open 1`] = `
.c2 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c2 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c3 {
  transform: translate3d(0,0,0);
  perspective: 1000;
  backface-visibility: hidden;
  top: 1.4rem;
  right: 1.4rem;
  z-index: 20;
  position: absolute;
  border-radius: 50%;
  border: none;
  background-color: #ffffff;
}

.c3 * {
  fill: #607890;
}

.c3:hover {
  background-color: #eff2f4;
  box-shadow: 0 2px 8px rgba(239,242,244,0.5);
}

.c3:hover * {
  fill: #607890;
}

.c3:active {
  background-color: #dfe4e9;
  box-shadow: none;
}

.c3:active * {
  fill: #435465;
}

.c6 {
  display: flex;
  z-index: 10;
  margin-top: 3rem;
  justify-content: flex-end;
  flex-direction: column;
}

.c6>* {
  flex-grow: 1;
}

.c6>*+* {
  margin: 1.6rem 0 0;
}

.c5 {
  flex: 1;
  box-sizing: border-box;
}

.c0 {
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67, 84, 101, 0.65);
  z-index: 1000;
  align-items: center;
  animation: bgFadeIn 0.4s cubic-bezier(0, 0, 0.33, 1);
  overflow: hidden;
}

.c4 {
  background-color: #ffffff;
  color: #13181D;
  font-weight: 500;
  margin-bottom: 2.4rem;
}

.c1 {
  background: #ffffff;
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 0 0.4rem 3.2 rgba(67, 84, 101, 0.5);
  box-sizing: border-box;
  border-radius: 1.2rem;
  overflow-y: auto;
  max-height: 80%;
  width: calc(100% - 4.8rem);
  padding: 2.4rem;
  animation: slideIn 0.4s cubic-bezier(0, 0, 0.33, 1);
}

@media (min-width:600px) {
  .c6 {
    flex-direction: row;
  }

  .c6>* {
    max-width: 50%;
  }

  .c6>*+* {
    margin: 0 0 0 1.6rem;
  }
}

@media (min-width:608px) {
  .c1 {
    max-width: 56rem;
    padding: 3.2rem;
  }

  .c1::-webkit-scrollbar {
    width: 0.5rem;
  }

  .c1::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .c1::-webkit-scrollbar-thumb {
    border-radius: 1rem;
    background-color: #b0bcc8;
  }
}

<div>
  <div
    class="c0"
    id="medly-dialog-box"
    open=""
  >
    <div
      class="c1"
      id="medly-dialog-box-popup"
      minheight="200px"
      minwidth="200px"
      open=""
    >
      <svg
        class="c2 c3"
        data-testid="medly-dialog-box-close-button"
        fill="none"
        height="1em"
        id="medly-dialog-box-close-button"
        title="medly-dialog-box-close-icon"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
      <div
        class="c4"
        id="medly-dialog-box-header"
      >
        <p>
          Demo Header
        </p>
      </div>
      <div
        class="c5"
        id="medly-dialog-box-content"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
      </div>
      <div
        alignitems="right"
        class="c6"
        id="medly-dialog-box-actions"
      >
        Demo Actions
      </div>
    </div>
  </div>
</div>
`;
